--- a/player_styles.css
+++ b/player_styles.css
@@ -99,7 +99,7 @@ body {
     margin: 0;
     bottom: 7.5%;
     right: 70%;
-    font-size: calc(var(--true-height) .05);
+    font-size: calc(var(--true-height) *.05);
     font-weight: normal;
     position: absolute;
 }
@@ -122,7 +122,7 @@ body {
     margin: 0;
     top: 50%;
     left: 50%;
-    font-size: calc(var(--true-height) .03);
+    font-size: calc(var(--true-height) *.03);
     transform: translate(-50%, -50%);
     position: absolute;
 }
