--- a/StoryPlayer/storyPlayer_styles.css
+++ b/StoryPlayer/storyPlayer_styles.css
@@ -1,14 +1,15 @@
 @font-face {
     font-family: NuberNext;
-    src: url(Fonts/NuberNext\ DemiBold\ Condensed.ttf);
+    src: url(../Fonts/NuberNext\ DemiBold\ Condensed.ttf);
 }
 
 :root {
     --primary-color: #000000;
-    --secondary-color: #2ecc71;
     --text-color: #ffffff;
     --true-width: min(100vw, calc(100vh * (16/9)));
     --true-height: calc(min(100vw, calc(100vh * (16/9))) * 9/16);
+    -webkit-user-select: none;
+    user-select: none;
 }
 
 body {
@@ -21,15 +22,16 @@ body {
 }
 
 .loadingScreen {
-  width: 100%;
-  height: 100%;
-  padding: 0%;
-  opacity: 1;
-  left: 0%;
-  top: 0%;
-  position: absolute;
-  visibility: visible;
-  object-fit: contain;
+    background-color: black;
+    width: 100%;
+    height: 100%;
+    padding: 0%;
+    opacity: 1;
+    left: 0%;
+    top: 0%;
+    position: absolute;
+    visibility: visible;
+    object-fit: contain;
 }
 
 .UI_element {
@@ -72,12 +74,12 @@ body {
 
 .logPointer {
     text-align: left;
-    color: #ffc400;
-    width: calc(var(--true-width)/2);
+    color: #ffc400;  
+    width: 2ch;
     margin: 0;
-    top: 0.45ch;
-    left: 30%;
-    font-size: 1.35em; 
+    left: 29.75%;
+    top: 13%;
+    font-size: .8em; 
     position: absolute;
     opacity: 0;
 }
@@ -209,7 +211,6 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
-    /* transform: translateX(-50%) translateY(-50%); */
 }
 
 .overlay {
@@ -225,7 +226,7 @@ body {
 .speaker {
     text-align: right;
     color: #aaaaaa;
-    width: fit-content;
+    width: 30ch;
     margin: 0;
     top: 0;
     right: 70%;
