Finalized Event Menu setup and loading. Cleaned up file organization and consolidated img assets.

--- a/VignetteMenu/vignetteMenu_styles.css
+++ b/VignetteMenu/vignetteMenu_styles.css
@@ -23,7 +23,7 @@ body {
 }
 
 #bgOverlay {
-    background-image: url("../imgs/UI/bg.png");
+    background-image: url("./imgs/bg.png");
     background-blend-mode: multiply;
     width: 100%;
     height: 100%;
