--- a/EventMenu/eventMenu_styles.css
+++ b/EventMenu/eventMenu_styles.css
@@ -20,7 +20,7 @@ body {
 }
 
 .menu {
-    background: rgb(110, 110, 255);
+    background: rgb(0, 0, 0);
     width: var(--true-width);
     height: auto;
     aspect-ratio: 16/9;
@@ -42,8 +42,8 @@ body {
     left: 0%;
     top: 0%;
     position: absolute;
-    visibility: hidden;
-    object-fit: cover;
+    visibility: visible;
+    object-fit: contain;
 }
 
 .bg {
@@ -58,6 +58,19 @@ body {
 .UI {
     position: absolute;
     height: 10%;
+    font-size: 4ch;
+    color: white;
+    transform: translate(-50%, -50%);
+}
+
+#trust {
+    position: absolute;
+    transform: translate(-50%, -50%);
+}
+
+#inspect {
+    position: absolute;
+    height: 6%;
     font-size: 4ch;
     color: white;
     transform: translate(-50%, -50%);
