--- a/VignetteMenu/vignetteMenu_styles.css
+++ b/VignetteMenu/vignetteMenu_styles.css
@@ -19,7 +19,7 @@ body {
     display: flex;
     flex-direction: row;
     flex-wrap: nowrap;
-    overflow: hidden;
+    overflow: scroll;
 }
 
 #bgOverlay {
