--- a/StoryPlayer/storyPlayer_styles.css
+++ b/StoryPlayer/storyPlayer_styles.css
@@ -258,3 +258,14 @@ body {
     position: absolute;
 }
 
+.blocker {
+    background-color: rgba(0, 0, 0, 0);
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    position: absolute;
+}
+
