--- a/StoryPlayer/storyPlayer_styles.css
+++ b/StoryPlayer/storyPlayer_styles.css
@@ -193,6 +193,16 @@ body {
     overflow: hidden;
 }
 
+.full {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+}
+
 .background {
     background-color: transparent;
     width: 100%;
@@ -220,6 +230,18 @@ body {
     object-fit: cover;
     top: 0px;
     left: 0px;
+    position: absolute;
+}
+
+.text {
+    text-align: right;
+    color: #aaaaaa;
+    width: fit-content;
+    margin: 0;
+    bottom: 15%;
+    right: 70%;
+    font-size: calc(var(--true-height) *.045);
+    font-weight: normal;
     position: absolute;
 }
 
@@ -266,6 +288,15 @@ body {
     left: 0;
     right: 0;
     bottom: 0;
+    position: absolute;
+}
+
+.layer {
+    width: 100%;
+    height: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     position: absolute;
 }
 
