--- a/StoryPlayer/storyPlayer_styles.css
+++ b/StoryPlayer/storyPlayer_styles.css
@@ -193,7 +193,7 @@ body {
     overflow: hidden;
 }
 
-.full {
+.fill {
     position: absolute;
     width: 100%;
     height: 100%;
@@ -221,6 +221,7 @@ body {
     position: absolute;
     top: 50%;
     left: 50%;
+    font-size: 0;
 }
 
 .overlay {
@@ -298,5 +299,6 @@ body {
     left: 50%;
     transform: translate(-50%, -50%);
     position: absolute;
+    font-size: 0;
 }
 
